<resources>
    <string name="app_name" translatable="false">JIRAapp</string>
    <string name="jira_app">Jira system for Raf students</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="statistics">Statistics</string>
    <string name="frag_new">New</string>
    <string name="tickets">Tickets</string>
    <string name="profile">Profile</string>
    <string name="raf_jira_statistics">Raf Jira statistics</string>
    <string name="todo">ToDo</string>
    <string name="enhancements">Enhancements</string>
    <string name="bugs">Bugs</string>
    <string name="in_progress">In progress</string>
    <string name="done">Done</string>
    <string name="add_new_ticket_text">Add new ticket</string>
    <string name="est">Est.</string>
    <string name="ticket_title">Ticket title</string>
    <string name="ticket_description">Ticket description</string>
    <string name="add_new_ticket">Add new ticket</string>
    <string name="log_out">Log out</string>
    <string name="search">Search...</string>
    <string name="ticket_type">Ticket type</string>
    <string name="priority">Priority</string>
    <string name="estimation">Estimation</string>
    <string name="logged_time">Logged time</string>
    <string name="edit">Edit</string>
    <string name="ticket_desc">Ticket desc.</string>
    <string name="edit_ticket">Edit ticket</string>
    <string name="save">Save</string>

    <string-array name="spinnerTypeItems">
        <item>Ticket type</item>
        <item>Enhancement</item>
        <item>Bug</item>
    </string-array>

    <string-array name="spinnerPriorityItems">
        <item>Priority</item>
        <item>Highest</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>Lowest</item>
    </string-array>
</resources>