<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/LogInActivityButton">

        <ImageView
            android:id="@+id/LogInActivityImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_file"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/LogInActivityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jira_app"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginBottom="45dp"/>

        <EditText
            android:id="@+id/LogInActivityEnterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/LogInActivityEnterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/LogInActivityEnterPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </LinearLayout>


        <Button
            android:id="@+id/LogInActivityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="30dp"
            android:text="@string/login"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="@color/orange"
            android:textAllCaps="false"/>



</androidx.constraintlayout.widget.ConstraintLayout>